--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -47,7 +47,7 @@
 	-->
 
 </head>
-<body class="no-scroll">
+<body>
 
 	<!-- Google Tag Manager DMN -->
 	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T45ZQL" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
