--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -462,6 +462,12 @@ VIII. MORE LINKS
 -------------------------------------------
 */
 
+/*
+-------------------------------------------
+VIII. MORE LINKS
+-------------------------------------------
+*/
+
 .more {
   margin: 4.8rem auto 0;
   max-width: 650px;
@@ -497,6 +503,41 @@ VIII. MORE LINKS
   letter-spacing: -.2px;
 }
 
+@media (min-width: 800px) {
+  .more a {
+    float: none;
+    margin: 0 0 1.2rem;
+    width: 100%;
+    border-bottom: 1px solid $black215;
+    padding-bottom: 1.2rem;
+    &:last-of-type {
+        border-bottom: 0;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+  }
+  .more a img {
+    float: left;
+    width: 33%;
+    margin-bottom: 0;
+  }
+  .more a h6, .more a p {
+    float: right;
+    width: 63%;
+  }
+  .more a h6 {
+    margin-top: -.3rem;
+    margin-bottom: .6rem;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+  }
+  .more a p {
+      font-size: 1.2rem;
+      line-height: 1.6rem;
+      letter-spacing: 0;
+  }
+}
+
 @media (max-width: 600px) {
   .more a {
     float: none;
@@ -522,8 +563,8 @@ VIII. MORE LINKS
   .more a h6 {
     margin-top: -.3rem;
     margin-bottom: .6rem;
-    font-size: 1.3rem;
-    line-height: 1.5rem;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
   }
   .more a p {
       font-size: 1.2rem;
