--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -48,9 +48,9 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  background-color: rgba(5,5,5,.65);
+  background-color: rgba($borderbeige, .5);
   text-align: center;
-  padding-top: 10vh;
+  padding: 10vh 10px 0;
   color: white;
   h1, h2 {
     font-weight: bold;
@@ -58,28 +58,35 @@
     margin: 0 auto;
   }
   h1 {
-    @include type(4rem, 4.4rem, 1.2rem);
+    @include type(5rem, 5.4rem, 1.2rem);
     text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgba(15,15,15,.9);
+    letter-spacing: -.5px;
   }
   h2 {
     @include type(2rem, 2.4rem, 2.4rem);
   }
   button {
-    background-color: rgba(15,15,15,.0);
-    border: 2px solid white;
-    padding: 15px 10px;
-    color: white;
-    @include type(1.4rem, 1.8rem, 0);
+    background-color: white;
+    border: none;
+    padding: 15px 20px;
+    color: black;
+    font-weight: bold;
+    @include type(1.4rem, 1.4rem, 0);
     text-transform: uppercase;
     cursor: pointer;
     @include transition(all, .2s, ease-out);
-    border-radius: 3px;
+    text-shadow: -1px 1px rgb(235,235,235);
     &:hover {
-      background-color: rgba(15,15,15,1);
+      background-color: $black235;
+    }
+    &:active {
+      background-color: $black215;
     }
   }
 }
 .cover__logo {
+  width: 20%;
   max-width: 150px;
   margin-bottom: 2.4rem;
 }
@@ -91,22 +98,23 @@
 }
 
 .cover__branding {
-  max-width: 150px;
+  max-width: 280px;
   left: 50%;
-  margin-left: -75px;
+  margin-left: -140px;
 }
 
 .cover--small {
-  max-width: 70px;
+  max-width: 50px;
   float: left;
   &:first-of-type {
-    margin-right: 10px;
+    margin-right: 15px;
   }
 }
 .cover--large {
   max-width: 150px;
-  clear: both;
-  margin-top: 1.2rem;
+  float: left;
+  // clear: both;
+  margin-right: 15px;
 
 }
 
@@ -133,7 +141,29 @@
   position: fixed;
   top: 0px;
   left: 500px;
+  background-color: $black33;
+  .mapboxgl-ctrl-attrib {
+    display: none !important;
+    visibility: hidden;
+  }
+  @media (max-width: 1000px) {
+    width: calc(100% - 300px);
+    left: 400px;
+  }
+  @media (max-width: 800px) {
+    width: 100%;
+    left: 0;
+    top: 0;
+    height: 50vw;
+    z-index: 10;
+    border-bottom: 3px solid $borderBrown;
+    box-shadow: 0 5px 5px rgba(15,15,15,.5);
+  }
+  @media (max-width: 450px) {
+    height: 56vw;
+  }
 }
+
 #minimap {
   position: fixed;
   bottom: 20px;
@@ -146,18 +176,38 @@
     display: none !important;
     visibility: hidden;
   }
+  @media screen and (max-width: 800px) {
+    width: 100px;
+    height: 80px;
+    bottom: auto;
+    top: calc(50vw - 100px);
+    z-index: 15;
+  }
+  @media screen and (max-width: 450px) {
+    top: calc(56vw - 90px);
+    right: 10px;
+  }
 }
 
 .locator {
   width: 14px;
   height: 14px;
   border: 2px solid $borderBrown;
-  display: block;
 }
 
 #content {
   max-width: 500px;
+  @media (max-width: 1000px) {
+    max-width: 400px;
+  }
+  @media (max-width: 800px) {
+    max-width: none;
+    width: 100%;
+    padding-top: calc(50vw - 60px);
+  }
 }
+
+
 
 #upper-block {
   background-color: $borderbeige;
@@ -173,6 +223,9 @@
     left: 50%;
     margin-left: -15px;
     @include rotate(45deg);
+  }
+  @media (max-width: 800px) {
+    padding-top: 4.8rem;
   }
 }
 
@@ -254,22 +307,24 @@
 }
 
 .city {
-  margin-left: 20px;
-  margin-top: -10px;
-  @include type(2rem, 2rem, 0);
-  background-color: rgba(15,15,15,.9);
-  padding: 5px;
+  margin-top: -9px;
+  @include type(12px, 12px, 0);
+  padding: 3px;
+  margin-left: 10px;
+  font-weight: normal;
+  background-color: rgba($black33, .85);
 }
 
 .country {
   opacity: .5;
-  @include type(5rem, 5rem, 0);
-  margin-left: 50px;
-}
-
-.label__mexico {
-  left: -200px !important;
+  @include type(3rem, 3rem, 0);
   margin-left: 0;
+  @media (max-width: 800px) {
+    left: 20px !important;
+    &.label__mexico {
+      left: -60px !important;
+    }
+  }
 }
 
 .pin {
