--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -76,7 +76,7 @@ googletag.enableServices();
 
 {%block content%}
 
-<div class="cover">
+<!-- <div class="cover">
   <video loop muted autoplay playsinline poster="images/_cover-poster.jpg" class="cover__video">
     <source src="assets/coverloop.mp4" type="video/mp4" />
     <source src="assets/coverloop.ogg" type="video/mp4" />
@@ -85,15 +85,15 @@ googletag.enableServices();
     <img class="cover__logo" src="images/_borderland-logo-alt.png" alt="The Borderland Project logo" />
     <h1>The cost of a wall</h1>
     <h2>An explanatory deckhead could go in this spot here and be about this long.</h2>
-    <button id="cover__enter">Explore the wall</button>
+    <button id="cover__enter">Explore the border</button>
 
     <div class="cover__branding clearfix">
       <img class="cover--small" src="images/_telemundo-logo.png" alt="Telemundo logo" />
-      <img class="cover--small" src="images/_nbc-logo.png" alt="NBC5 logo" />
       <img class="cover--large" src="images/_dmn-logo.png" alt="The Dallas Morning News logo"/>
+      <img class="cover--small" src="images/_nbc-logo.png" alt="NBC5 logo" />
     </div>
   </div>
-</div>
+</div> -->
 
 <div id="upper-block">
 
@@ -143,7 +143,7 @@ googletag.enableServices();
 
     </div>
 
-    <div class="location" data-lat="31.587036" data-long="-106.287724">
+    <div class="location" data-lat="31.752576" data-long="-106.487386">
       <h5>El Paso borderland</h5>
       <h6>31.752576, -106.487386</h6>
       <video id="" preload="metadata" controls playsinline poster="images/_elpaso-poster.jpg">
