Updates copy on a few locations.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -41,15 +41,12 @@ body {
   display: block;
   padding-bottom: 200px !important;
   height: auto !important;
+  width: 100%;
   @media (max-width: 650px) {
       padding-bottom: 225px !important;
   }
   @media (max-width: 450px) {
       padding-bottom: 250px !important;
-  }
-  &.no-scroll {
-    height: 100vh;
-    overflow: hidden;
   }
 }
 ol, ul {
