--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js" class="no-scroll">
 <head prefix='og: http://ogp.me/ns#'>
 
 	<!-- Add Custom Meta Data -->
@@ -47,7 +47,7 @@
 	-->
 
 </head>
-<body>
+<body class="no-scroll">
 
 	<!-- Google Tag Manager DMN -->
 	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T45ZQL" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
