--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -76,7 +76,7 @@ googletag.enableServices();
 
 {%block content%}
 
-<!-- <div class="cover">
+<div class="cover">
   <video loop muted autoplay playsinline poster="images/_cover-poster.jpg" class="cover__video">
     <source src="assets/coverloop.mp4" type="video/mp4" />
     <source src="assets/coverloop.ogg" type="video/mp4" />
@@ -93,7 +93,7 @@ googletag.enableServices();
       <img class="cover--small" src="images/_nbc-logo.png" alt="NBC5 logo" />
     </div>
   </div>
-</div> -->
+</div>
 
 <div id="upper-block">
 
@@ -138,8 +138,8 @@ googletag.enableServices();
           <source id="" src="assets/hachita2.ogg" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>This is a test headline</h4>
-      <p>horse-race coverage copyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
+      <h4>The front line</h4>
+      <p>Camp Ramsey sits on the New Mexico-Mexico border, in the middle of a vast, wide-open desert that comprises much of the United States’ southern border. It serves as a forward operating base for the U.S. Customs and Border Protection Department, 130 miles from El Paso, where border patrol agents operate for eight-day stretches at a time. It serves as a means of putting resources closer to the border, where vigilant agents know that there is always someone trying to get in.</p>
 
     </div>
 
@@ -199,8 +199,8 @@ googletag.enableServices();
           <source id="" src="" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>This is a test headline</h4>
-      <p>Eighty miles north of the Texas-Mexico border in Brooks County, South Texan rancher Mike Vickers leads the Texas Border Volunteers, a group of nearly 300 men and women who gather monthly to conduct undercover operations along the border. Their mission is to report criminal trespassing by undocumented immigrants crossing the border into the United States. Some think they are just vigilantes, but  multiple law enforcement agencies across South Texas rely on them as an extra set of eyes and ears to help the Border Patrol.</p>
+      <h4>Volunteer eyes and ears</h4>
+      <p>Eighty miles north of the Texas-Mexico border in Brooks County, South Texan rancher Mike Vickers leads the Texas Border Volunteers, a group of nearly 300 men and women who gather monthly to conduct undercover operations along the border. Their mission is to report criminal trespassing by undocumented immigrants crossing the border into the United States. Some think they are just vigilantes, but multiple law enforcement agencies across South Texas rely on them as an extra set of eyes and ears to help the Border Patrol.</p>
     </div>
 
     <div class="location no-pad" data-lat="26.120063" data-long="-98.292448">
@@ -211,8 +211,8 @@ googletag.enableServices();
           <source id="" src="" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>This is a test headline</h4>
-      <p>horse-race coverage copyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
+      <h4>The cost</h4>
+      <p>The Rio Grand River is a twelve hundred mile-long first line of defense across Texas’ southern border, and Texas Department of Public Safety troopers will tell you it costs a lot to defend. Troopers use boats outfitted with kevlar panels and 30 caliber machine guns, helicopters and thousands of cameras to monitor illegal crossings. According to Texas law makers, that’s money well-spent, and the number of undocumented immigrant apprehensions back up that claim.</p>
     </div>
 
     {%include "adblock1.html" %}
