--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -133,6 +133,16 @@
   top: 0px;
   left: 500px;
   background-color: $black33;
+  &:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: block;
+    cursor: default;
+    content: "";
+  }
   .mapboxgl-ctrl-attrib {
     display: none !important;
     visibility: hidden;
@@ -163,6 +173,16 @@
   height: 120px;
   background-color: black;
   border: 2px solid black;
+  &:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: block;
+    cursor: default;
+    content: "";
+  }
   .mapboxgl-ctrl-attrib {
     display: none !important;
     visibility: hidden;
@@ -324,4 +344,8 @@
   background-image: url('../images/_marker-brown.png');
   background-size: 20px;
   background-repeat: no-repeat;
+}
+
+.shareComments {
+  padding: 0 0;
 }
