Adds copy for Presidio and Laredo. Adds head, deck and intro.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -74,8 +74,8 @@ googletag.enableServices();
   </video>
   <div class="cover__content">
     <img class="cover__logo" src="images/_borderland-logo-alt.png" alt="The Borderland Project logo" />
-    <h1>The cost of a wall</h1>
-    <h2>An explanatory deckhead could go in this spot here and be about this long.</h2>
+    <h1>The weight of a wall</h1>
+    <h2>Voices from the edge of Texas wrestle with ‘a big, beautiful, powerful wall’ through the borderland.</h2>
     <button id="cover__enter">Explore the border</button>
 
     <div class="cover__branding clearfix">
@@ -113,9 +113,8 @@ googletag.enableServices();
       <div id="minimap"></div>
       <p id="map-source">Satellite imagery: USGS/Landsat 8</p>
 
-      <p class="intro"><span class="dropcap">H</span>orse-race coverage copyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
-
-      <p class="intro">horse-race coverage copyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
+      <p class="intro"><span class="dropcap">E</span>arly in 2017, The Dallas Morning News, NBC 5 and Telemundo 39 gathered a team of writers and photojournalists to document the federal government’s effort to construct a “physically imposing” and “aesthetically pleasing” 30-foot concrete structure.</p>
+      <p class="intro">The “Borderland Project” is the result of that commitment. Our stories trace the border from the deserts near El Paso to the fertile valley at the tip of Texas. Most of that land is divided by the natural boundary of the Rio Grande. The river carves a path through diverse landscapes and cityscapes that reflect the rich history of both Texas and Mexico. Each stop along our trip reveals a new set of voices grappling with the tangle of issues along one of the busiest international boundaries in the world.</p>
     </section>
   </div>
 
@@ -155,7 +154,7 @@ googletag.enableServices();
           <source id="" src="assets/presido.ogg" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>This is a test headline</h4>
+      <h4>Neighbors across the border</h4>
       <p>The tiny border town of Presidio sits in the Big Bend region of West Texas, more than 200 miles from major cities like Midland-Odessa or El Paso. Its closest neighbor, Ojinaga, is five times the size and just across the Rio Grande River in Mexico. The two communities, whose bloodlines and economic ties extend across the border, fear a wall will hamper a relationship in which the two communities rely on each other both economically and in times of emergency.</p>
     </div>
 
@@ -167,8 +166,8 @@ googletag.enableServices();
           <source id="" src="assets/lakeamistad.ogg" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>This is a test headline</h4>
-      <p>horse-race coverage copyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
+      <h4>Life on the Lake</h4>
+      <p>For some the words border wall conjure images of a dusty landscape with a fence following the trickle of the Rio Grande through the West Texas desert. But for the people of Val Verde County the border wall is something else. It’s a question. How do you get a border wall through the rocky landscape of one of the state’s premier fishing spots? Lake Amistad and the city of Del Rio are approximately 152 miles west of San Antonio, but they’re at the center of a heated discussion about the Mexican border and security.</p>
     </div>
 
     <div class="location no-pad" data-lat="27.597660" data-long="-99.536872">
@@ -179,8 +178,8 @@ googletag.enableServices();
           <source id="" src="assets/laredo.ogg" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>This is a test headline</h4>
-      <p>horse-race coverage copsyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
+      <h4>Questions of commerce</h4>
+      <p>Laredo occupies a unique spot in the Borderland. The city’s geography and history have long made Laredo a focal point for commercial trade. In 2015, more $260 billion dollars in commercial trade flowed through the city. The Bureau of Transportation lists Laredo as the largest point of entry for loaded trucks along the southern border. We were given a unique look at how U.S. Customs and Border Protection agents keep people and goods trucking across the bridges of Laredo.</p>
     </div>
 
     <div class="subscribe-cta">
@@ -209,7 +208,7 @@ googletag.enableServices();
           <source id="" src="" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>The cost</h4>
+      <h4>The cost of securing the Borderland</h4>
       <p>The Rio Grand River is a twelve hundred mile-long first line of defense across Texas’ southern border, and Texas Department of Public Safety troopers will tell you it costs a lot to defend. Troopers use boats outfitted with kevlar panels and 30 caliber machine guns, helicopters and thousands of cameras to monitor illegal crossings. According to Texas law makers, that’s money well-spent, and the number of undocumented immigrant apprehensions back up that claim.</p>
     </div>
 
@@ -221,21 +220,19 @@ googletag.enableServices();
           <source id="" src="" type="video/ogg" />
           Your browser does not support native video.
       </video>
-      <h4>Headline here</h4>
-      <p>horse-race coverage copsyboy the power of the press belongs to the person who owns one data visualization tweet Jeff Jarvis Patch Like button explainer, TechCrunch should isn't a business model copyright Romenesko WordPress Arianna Kindle Single Pictures of Goats section got drudged, gamification put the paper to bed the other longer Book Review The Work of Art in the Age of Mechanical Reproduction open newsroom Foursquare A.J. Liebling.</p>
+      <h4>The artist’s view</h4>
+      <p>Not far from where the Rio Grande meets the Gulf of Mexico sits the city of Brownsville. Here we met an artist with a long history with the river and a wall.</p>
     </div>
-
-    <p class="twitter-tag">Follow writer name on Twitter at <a href="urlhere">@twittertag.</a></p>
 
     {%include "adblock2.html" %}
 
     <section class="credits clearfix">
-        <p>Author: <a href="mailto:emailaddress">Name</a></p>
-        <p>Editor: <a href="mailto:emailaddress">Name</a></p>
-        <p>Copy Editor: <a href="mailto:emailaddress">Name</a></p>
-        <p>Photos: <a href="mailto:emailaddress">Name</a></p>
-        <p>Graphics: <a href="mailto:emailaddress">Name</a></p>
-        <p>Designer: <a href="mailto:emailaddress">Name</a></p>
+        <p><strong>Reporters:</strong> Kris Gutierrez and Maria Guerrero (NBC 5); Angela Kocherga (DallasNews); Norma Garcia (Telemundo); </p>
+        <p><strong>Editors:</strong> Keith Campbell and Mede Nix (DallasNews); Guy Mitchell (NBC 5)</p>
+        <p><strong>Copy Editor:</strong> <a href="mailto:emailaddress">Name</a></p>
+        <p><strong>Photo and video:</strong> Andy Viganas, Peter Hull and Mike Heimbuch (NBC 5)</p>
+        <p><strong>Graphics:</strong> Joel Michon and Faruk Lania (NBC Arthouse)</p>
+        <p><strong>Designer and development:</strong> John Hancock and Andrew Chavez (DallasNews)</p>
     </section>
 	<!-- end credits -->
 
