--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -33,6 +33,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: $black33;
 }
 
 .cover__content {
@@ -40,7 +41,7 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  background-color: rgba($borderbeige, .5);
+  background-color: rgba($borderBrown, .5);
   text-align: center;
   padding: 10vh 10px 0;
   color: white;
