--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -114,7 +114,7 @@ googletag.enableServices();
       <p id="map-source">Satellite imagery: USGS/Landsat 8</p>
 
       <p class="intro"><span class="dropcap">E</span>arly in 2017, <em>The Dallas Morning News</em>, KXAS-TV (NBC5) and Telemundo 39 gathered a team of writers and photojournalists to document the federal government’s effort to construct a “physically imposing” and “aesthetically pleasing” 30-foot concrete structure.</p>
-      <p class="intro">The “Borderland Project” is the result of that commitment. Our stories trace the border from the deserts near El Paso to the fertile valley at the tip of Texas. Most of that land is divided by the natural boundary of the Rio Grande. The river carves a path through diverse landscapes and cityscapes that reflect the rich history of both Texas and Mexico. Each stop along our trip reveals a new set of voices grappling with the tangle of issues along one of the busiest international boundaries in the world.</p>
+      <p class="intro">The “Borderland Project” is the result of that commitment. Our stories trace the border from the deserts near El Paso to the fertile valley at the tip of Texas. Most of that land is divided by the natural boundary of the Rio Grande. The river carves a path through diverse landscapes and cityscapes that reflect the rich history of both Texas and Mexico. Each stop along our trip reveals a new set of voices grappling with the tangle of issues along one of the busiest international boundaries in the world, and we’ll continue to add more voices throughout the year.</p>
     </section>
   </div>
 
@@ -141,7 +141,7 @@ googletag.enableServices();
           Your browser does not support native video.
       </video>
       <h4>In west Texas, hurdles abound</h4>
-      <p>In the vast western reaches of Texas, the border wall faces many challenges. Private landowners balk at having the barrier on their land. Locals view a border wall as an idea conceived by those who don’t know or understand the region. The city of El Paso would rather spend the money on more bridges to help alleviate traffic during peak crossing times. And Reps. Will Hurd, R-San Antonio, and Beto O’Rourke, D-El Paso, both oppose the idea of a wall, calling it the most expensive and least effective way to do border security.</p>
+      <p>In the vast western reaches of Texas, the border wall faces many challenges. Private landowners balk at having the barrier on their land. Locals view a border wall as an idea conceived by those who don’t know or understand the region. The city of El Paso would rather spend the money on more bridges to help alleviate traffic during peak crossing times. And Reps. Will Hurd, R-San Antonio, and Beto O’Rourke, D-El Paso, both oppose the idea of a wall, calling it the most expensive and least effective way to do border security. <a href="https://www.dallasnews.com/news/texas/2017/05/15/along-texas-mexico-border-trumps-wall-faces-barrier-public-opposition" target="_blank">Read more.</a></p>
     </div>
 
     {%include "adblock1.html" %}
@@ -222,6 +222,11 @@ googletag.enableServices();
       </video>
       <h4>The artist’s view</h4>
       <p>Not far from where the Rio Grande meets the Gulf of Mexico sits the city of Brownsville, home to Mark Clark. Clark retired to Brownsville to embrace his love of painting. But now his inspiration, the view of the Rio Grande, has been ruined by the border fence. Clark has abandoned landscape paintings in favor of satire as a way to protest what he calls an obscene gesture to our neighbors across the river.</p>
+    </div>
+
+    <div class="related">
+      <h5>Read more about immigration and border security</h5>
+      <p><a href="https://www.dallasnews.com/news/immigration/2017/05/14/immigration-border-security-complicated-tiny-texas-town-suing-stop-sanctuary-cities-ban" target="_blank">Immigration, border security are complicated for the tiny Texas town suing to stop 'sanctuary cities' ban</a></p>
     </div>
 
     {%include "adblock2.html" %}
