--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -237,7 +237,7 @@ googletag.enableServices();
         <p><strong>Copy Editor:</strong> Frank Smith (DallasNews)</p>
         <p><strong>Photo and video:</strong> Andy Viganas, Peter Hull and Mike Heimbuch (NBC 5); Daniel Manrique (Telemundo 39)</p>
         <p><strong>Graphics:</strong> Joel Michon and Faruk Lania (NBC Arthouse)</p>
-        <p><strong>Designer and development:</strong> John Hancock and Andrew Chavez (DallasNews)</p>
+        <p><strong>Designe and development:</strong> John Hancock and Andrew Chavez (DallasNews)</p>
     </section>
 	<!-- end credits -->
 
