--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -98,7 +98,7 @@ googletag.enableServices();
 
 
       <div class="byline-block">
-          <!-- <p>By <a target="_blank" href="mailto:emailaddresshere">Writer Name</a> | Staff Writer</p> -->
+          <p>By Angela Kocherga | Staff Writer<br />Kris Gutierrez and Maria Guerrero | NBC 5 <br /> Norma Garcia | Telemundo 39</p>
           <p>Published May 17, 2017</p>
           <!-- <p>Updated Month, Date, Year</p> -->
       </div>
