Small tweak in Hachita text.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -95,8 +95,6 @@ googletag.enableServices();
   	</header>
   		<!-- end storyHead -->
 
-
-
       <div class="byline-block">
           <p>By Angela Kocherga | Staff Writer<br />Kris Gutierrez and Maria Guerrero | NBC 5 <br /> Norma Garcia | Telemundo 39</p>
           <p>Published May 17, 2017</p>
@@ -128,7 +126,7 @@ googletag.enableServices();
           Your browser does not support native video.
       </video>
       <h4>The front line</h4>
-      <p>Camp Ramsey sits on the New Mexico-Mexico border, in the middle of a vast, wide-open desert that includes much of the United States’ southern border. It serves as a forward operating base for U.S. Customs and Border Protection, 130 miles from El Paso, where Border Patrol agents operate for eight-day stretches at a time. It serves as a means of putting resources closer to the border, where vigilant agents know that there is always someone trying to get in.</p>
+      <p>Camp Ramsey sits on the New Mexico-Mexico border, in the middle of a vast, wide-open desert that includes much of the United States’ southern border. It serves as a forward operating base for U.S. Customs and Border Protection, 130 miles from El Paso, where Border Patrol agents operate for eight-day stretches at a time. The camp is a means of putting resources closer to the border, where vigilant agents know that there is always someone trying to get in.</p>
 
     </div>
 
