Adds refer to presido story.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -153,7 +153,7 @@ googletag.enableServices();
           Your browser does not support native video.
       </video>
       <h4>Neighbors across the border</h4>
-      <p>The tiny border town of Presidio sits in the Big Bend region of West Texas, more than 200 miles from major cities like Midland-Odessa or El Paso. Its closest neighbor, Ojinaga, is five times the size and just across the Rio Grande in Mexico. The two communities, whose bloodlines and economic ties extend across the border, fear a wall will hamper a relationship in which the two communities rely on each other both economically and in times of emergency.</p>
+      <p>The tiny border town of Presidio sits in the Big Bend region of West Texas, more than 200 miles from major cities like Midland-Odessa or El Paso. Its closest neighbor, Ojinaga, is five times the size and just across the Rio Grande in Mexico. The two communities, whose bloodlines and economic ties extend across the border, fear a wall will hamper a relationship in which the two communities rely on each other both economically and in times of emergency. <a href="https://www.dallasnews.com/news/mexico/2017/05/30/tiny-border-town-thatdepends-neighbors-mexico-opposes-wall" target="_blank">Read more.</a></p>
     </div>
 
     <div class="location" data-lat="29.449884" data-long="-101.058174">
