--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -70,7 +70,7 @@ googletag.enableServices();
 <div class="cover">
   <video loop muted autoplay playsinline poster="images/_cover-poster.jpg" class="cover__video">
     <source src="assets/coverloop.mp4" type="video/mp4" />
-    <source src="assets/coverloop.ogg" type="video/mp4" />
+    <source src="assets/coverloop.ogg" type="video/ogg" />
   </video>
   <div class="cover__content">
     <img class="cover__logo" src="images/_borderland-logo-alt.png" alt="The Borderland Project logo" />
